WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275195
[WebGPU] index buffer set on GPURenderPassEncoder can be garbage collected in a surprising fashion
https://bugs.webkit.org/show_bug.cgi?id=275195
Summary
[WebGPU] index buffer set on GPURenderPassEncoder can be garbage collected in...
Mike Wyrzykowski
Reported
2024-06-05 22:16:33 PDT
[WebGPU] index buffer set on GPURenderPassEncoder can be garbage collected in a surprising fashion
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-06-05 22:16:53 PDT
radar://129272040
Mike Wyrzykowski
Comment 2
2024-06-05 22:31:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29570
EWS
Comment 3
2024-06-06 23:38:52 PDT
Committed
279800@main
(3caf6eb7624d): <
https://commits.webkit.org/279800@main
> Reviewed commits have been landed. Closing PR #29570 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug