[WebGPU] index buffer set on GPURenderPassEncoder can be garbage collected in a surprising fashion https://bugs.webkit.org/show_bug.cgi?id=275195 <radar://129272040>

Reviewed by Dan Glastonbury.

We should hold a RefPtr and not a WeakPtr since a GC which occurs in the middle
of an encoder can result in the pipeline's ref count reaching zero.

There is not a risk of a retain cycle as the *Encoders are not retained by
any other objects.

* LayoutTests/fast/webgpu/regression/repro_275195-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_275195.html: Added.
* LayoutTests/fast/webgpu/regression/repro_275195b-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_275195b.html: Added.
* Source/WebGPU/WebGPU/RenderBundleEncoder.h:
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::setIndexBuffer):
* Source/WebGPU/WebGPU/RenderPassEncoder.h:
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::setIndexBuffer):

Canonical link: https://commits.webkit.org/279800@main